manifest/database/headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-h # give nage in helm with release name
  namespace: db
spec:
  ports:
    - port: 3306
      targetPort: 3306

  clusterIP: None
  selector:
    tier: back-end
    web: db
