manifest/database/network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-network-policy
  namespace: db
spec:
  podSelector:
    matchLabels:
      tier: back-end
      web: db
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        # allow  pod matchinng pod-selector label within web-ns namespace on port 3306
        - namespaceSelector:
            matchLabels:
              ns: web-ns
          podSelector:
            matchLabels:
              web: nginx-php
              tier: front-end
      ports:
        - protocol: TCP
          port: 3306
  # egress:
  #   - to:
  #       - ipBlock:
  #           cidr: 10.0.0.0/24
  #     ports:
  #       - protocol: TCP
  #         port: 5978
